# easyexif

./: CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md
include/: exif.h
lib/: CMakeLists.txt  easyexif_LIB.lib
src/: demo.cpp  exif.cpp
